--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -6,9 +6,7 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.box = "ubuntu/trusty64"
-
-  config.vm.network :private_network, ip: "192.168.1.12"
-  config.vm.network :forwarded_port, guest: 8000, host: 8000
+  config.vm.hostname = "nodebox"
 
   config.vm.provider :virtualbox do |vb|
     vb.customize ["modifyvm", :id, "--memory", "1024"]
