--- a/deploy/Vagrantfile.local.example
+++ b/deploy/Vagrantfile.local.example
@@ -5,9 +5,13 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   # Provider-specific configuration
   config.vm.provider :virtualbox do |vb|
-    #vb.customize ["modifyvm", :id, "--memory", "1024"]
+    #vb.customize ["modifyvm", :id, "--memory", "3072"]
   end
 
-  config.vm.synced_folder ".", "/home/vagrant/www/traugott/src"
-  config.vm.synced_folder "../log", "/home/vagrant/www/traugott/log"
+  config.vm.network :private_network, ip: "192.168.1.112"
+  config.vm.network :forwarded_port, guest: 3000, host: 3000
+
+  config.vm.synced_folder ".", "/home/vagrant/deploy"
+  config.vm.synced_folder "../app", "/home/vagrant/src"
+  config.vm.synced_folder "../../log", "/home/vagrant/log"
 end
