Add ajax form handler, add login/register form

--- a/app/traugott/settings/local.py.example
+++ b/app/traugott/settings/local.py.example
@@ -11,3 +11,23 @@ DATABASES = {
         'PORT': '',
     }
 }
+
+
+LOGGING = {
+    'version': 1,
+    'disable_existing_loggers': False,
+    'handlers': {
+        'file': {
+            'level': 'DEBUG',
+            'class': 'logging.FileHandler',
+            'filename': os.path.join('var','log','traugott.log')
+        },
+    },
+    'loggers': {
+        'django': {
+            'handlers': ['file'],
+            'level': 'DEBUG',
+            'propagate': True,
+        },
+    },
+}
