--- a/deploy/confs/nginx.conf
+++ b/deploy/confs/nginx.conf
@@ -1,4 +1,4 @@
-upstream itechart {
+upstream traugott {
     server unix:///home/manti/www/traugott/app.sock;
 }
 
@@ -21,7 +21,7 @@ server {
     }
 
     location / {
-        uwsgi_pass  itechart;
+        uwsgi_pass  traugott;
         include     /home/manti/www/traugott/confs/uwsgi_params;
     }
 }
