--- a/deploy/confs/nginx.conf
+++ b/deploy/confs/nginx.conf
@@ -1,27 +1,27 @@
-upstream traugott {
-    server unix:///home/manti/www/traugott/app.sock;
+upstream churchill {
+    server unix:///home/manti/www/churchill/app.sock;
 }
 
 server {
     listen      80;
-    server_name t.m53.by;
+    server_name c.m53.by;
     charset     utf-8;
 
     client_max_body_size 75M;
 
-    access_log   /home/manti/www/traugott/log/nginx_access.log;
-    error_log    /home/manti/www/traugott/log/nginx_error.log;
+    access_log   /home/manti/www/churchill/log/nginx_access.log;
+    error_log    /home/manti/www/churchill/log/nginx_error.log;
 
     location /static {
-        alias       /home/manti/www/traugott/src/app/static;
+        alias       /home/manti/www/churchill/src/app/static;
     }
 
     location /media {
-        alias       /home/manti/www/traugott/src/app/media;
+        alias       /home/manti/www/churchill/src/app/media;
     }
 
     location / {
-        uwsgi_pass  traugott;
-        include     /home/manti/www/traugott/confs/uwsgi_params;
+        uwsgi_pass  churchill;
+        include     /home/manti/www/churchill/confs/uwsgi_params;
     }
 }
