--- a/deploy/confs/supervisord.conf
+++ b/deploy/confs/supervisord.conf
@@ -1,7 +1,7 @@
-[program:traugott]
-command=/home/manti/www/traugott/venv/bin/uwsgi --ini /home/manti/www/traugott/src/deploy/confs/uwsgi.ini
+[program:churchill]
+command=/home/manti/www/churchill/venv/bin/uwsgi --ini /home/manti/www/churchill/src/deploy/confs/uwsgi.ini
 autostart=true
 autorestart=true
-stderr_logfile = /home/manti/www/traugott/log/supervisor_error.log
-stdout_logfile = /home/manti/www/traugott/log/supervisor_access.log
+stderr_logfile = /home/manti/www/churchill/log/supervisor_error.log
+stdout_logfile = /home/manti/www/churchill/log/supervisor_access.log
 stopsignal=INT
