--- a/deploy/confs/uwsgi.ini
+++ b/deploy/confs/uwsgi.ini
@@ -1,9 +1,9 @@
 [uwsgi]
-chdir           = /home/manti/www/traugott/src/
-pidfile         = /home/manti/www/traugott/app.pid
-socket          = /home/manti/www/traugott/app.sock
-virtualenv      = /home/manti/www/traugott/venv/
-module          = traugott.wsgi:application
+chdir           = /home/manti/www/churchill/src/
+pidfile         = /home/manti/www/churchill/app.pid
+socket          = /home/manti/www/churchill/app.sock
+virtualenv      = /home/manti/www/churchill/venv/
+module          = churchill.wsgi:application
 master          = true
 processes       = 1
 chmod-socket    = 666
