--- a/app/churchill/settings/local.py.example
+++ b/app/churchill/settings/local.py.example
@@ -1,17 +1,15 @@
-from __future__ import absolute_import, unicode_literals
-
+import os
 
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.postgresql_psycopg2',
         'NAME': 'traugott',
         'USER': 'traugott',
-        'PASSWORD': 'pa$$word',
+        'PASSWORD': 'Dalt0nik',
         'HOST': 'localhost',
         'PORT': '',
     }
 }
-
 
 LOGGING = {
     'version': 1,
@@ -20,14 +18,38 @@ LOGGING = {
         'file': {
             'level': 'DEBUG',
             'class': 'logging.FileHandler',
-            'filename': os.path.join('var','log','traugott.log')
+            'filename': 'app.log',
+        },
+        'console': {
+            'class': 'logging.StreamHandler',
+        },
+        'null': {
+            'class': 'logging.NullHandler',
         },
     },
     'loggers': {
-        'django': {
-            'handlers': ['file'],
+        'app': {
+            'handlers': ['file', 'console'],
             'level': 'DEBUG',
             'propagate': True,
         },
+        'django': {
+            'handlers': ['file', 'console'],
+            'level': 'DEBUG',
+            'propagate': True,
+        },
+        'django.db.backends': {
+            'handlers': ['null'],
+            'propagate': False,
+            'level':'DEBUG',
+        },
     },
 }
+
+CACHES = {
+    'default': {
+        'BACKEND': 'django.core.cache.backends.dummy.DummyCache',
+    }
+}
+
+COMPRESS_ENABLED = True
