--- a/app/churchill/settings/prod.py.example
+++ b/app/churchill/settings/prod.py.example
@@ -31,3 +31,6 @@ CACHES = {
         'LOCATION': '127.0.0.1:11211',
     }
 }
+
+COMPRESS_OUTPUT_DIR = 'cache'
+STATIC_PRECOMPILER_OUTPUT_DIR = 'cache'
