--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,20 @@
 version: '3.3'
 services:
 
-  mailhog:
-    image: mailhog/mailhog
-    ports:
-      - "8025:8025"
-      - "1025:1025"
-
   churchill-django:
     network_mode: host
     image: mantiby/churchill:latest
     container_name: churchill-django
     restart: always
     ports:
-      - "8000:8000"
+      - "8053:8053"
     volumes:
       - /home/manti/www/churchill/src/:/srv/churchill/src/
+      - /home/manti/www/churchill/data/:/srv/churchill/data/
       - /home/manti/www/churchill/log/:/var/log/churchill/
       - /home/manti/www/churchill/static/:/srv/churchill/static/
       - /home/manti/www/churchill/media/:/srv/churchill/media/
     environment:
       - DJANGO_SETTINGS_MODULE=churchill.settings.prod
-      - EMAIL_HOST=mailhog
-      - EMAIL_PORT=1025
+      - EMAIL_HOST=localhost
+      - EMAIL_PORT=25
