--- a/churchill/settings/prod.py.example
+++ b/churchill/settings/prod.py.example
@@ -2,19 +2,20 @@ from .base import *  # noqa
 
 DEBUG = False
 
-SECRET_KEY = "sa$j2w22j^1o1q)a0wcrg8ghv%$kf^vedb+6utq18yr%3#6se9"
+SECRET_KEY = ""
 
 ALLOWED_HOSTS = ["127.0.0.1", "churchill.manti.by"]
 
 BASE_URL = "https://churchill.manti.by"
 
-STATIC_ROOT = "/srv/churchill/static/"
-MEDIA_ROOT = "/srv/churchill/media/"
+STATIC_ROOT = "/var/lib/churchill/static/"
+
+MEDIA_ROOT = "/var/lib/churchill/media/"
 
 DATABASES = {
     "default": {
         "ENGINE": "django.db.backends.sqlite3",
-        "NAME": "/srv/churchill/data/db.sqlite3",
+        "NAME": "/var/lib/churchill/data/db.sqlite3",
     }
 }
 
