--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,19 @@ version: '3.3'
 services:
 
   churchill-django:
+    restart: always
     network_mode: host
     image: mantiby/churchill:latest
     container_name: churchill-django
-    restart: always
     ports:
-      - "8053:8053"
+      - 8053:8053
     volumes:
-      - /home/manti/www/churchill.manti.by/src/:/srv/churchill/src/
-      - /home/manti/www/churchill.manti.by/data/:/srv/churchill/data/
-      - /home/manti/www/churchill.manti.by/log/:/var/log/churchill/
-      - /home/manti/www/churchill.manti.by/static/:/srv/churchill/static/
-      - /home/manti/www/churchill.manti.by/media/:/srv/churchill/media/
+      - /home/manti/www/churchill.manti.by/churchill/:/srv/churchill/src/
+      - /home/manti/www/churchill.manti.by/data/:/var/lib/churchill/data/
+      - /mnt/nostromo/www/churchill/static/:/var/lib/churchill/static/
+      - /mnt/nostromo/www/churchill/media/:/var/lib/churchill/media/
+      - /mnt/nostromo/www/churchill/log/:/var/log/churchill/
     environment:
       - DJANGO_SETTINGS_MODULE=churchill.settings.prod
-      - EMAIL_HOST=localhost
-      - EMAIL_PORT=25
+    command: |
+      gunicorn churchill.wsgi:application --bind 0.0.0.0:8053 --workers 2 --log-file /var/log/churchill/wsgi.log
