Fix nginx config

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -27,9 +27,8 @@ server {
     }
 
     location /api/ {
-        expires max;
-        add_header Pragma 'public';
-        add_header Cache-Control 'public, must-revalidate, proxy-revalidate';
+        expires    off;
+        add_header Cache-Control 'private';
 
         proxy_pass  http://127.0.0.1:8053;
         include /home/manti/www/churchill.manti.by/churchill/config/proxy-params.conf;
